# scrabble

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/fourth_finger/scrabble/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/models/: Board.cpp  Board.h  Dictionary.h  DictionaryUtility.cpp  DictionaryUtility.h  LetterNode.cpp  LetterNode.h  Tile.h  WordLocation.cpp  WordLocation.h  WordTree.cpp  WordTree.h
app/src/main/java/io/fourth_finger/scrabble/: ActivityMain.kt  ActivityMainViewModel.kt  Board.kt  BoardTileView.kt  DictionaryUtility.kt  FontSizeTable.kt  GameBoardViewGroup.kt  GameState.kt  GameStateContainer.kt  LetterFrequencyList.kt  LetterNode.kt  MainActivity.kt  RackState.kt  Tile.kt  TileBag.kt  TileRack.kt  TileRackViewGroup.kt  TileView.kt  WordTree.kt
app/src/main/java/io/fourth_finger/scrabble/dictionary/: DictionaryUtility.kt  LetterFrequencyList.kt  LetterNode.kt  WordTree.kt
app/src/main/java/io/fourth_finger/scrabble/models/: Board.kt  Dictionary.kt  GameState.kt  Tile.kt  TileBag.kt  TileRack.kt  WordLocation.kt
app/src/main/java/io/fourth_finger/scrabble/views/: BoardTileView.kt  DragMonitor.kt  FontSizeTable.kt  GameBoardViewGroup.kt  TileRackViewGroup.kt  (+2 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/io/fourth_finger/scrabble/: ExampleUnitTest.kt  TileBagTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
